# mana-habilidade-pseudonimizar-pii

./: .gitignore  README.md  SKILL.md  manifest.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
docs/: EXEMPLO_USO.md
src/mana_habilidade_placeholder/: __init__.py  core.py
src/mana_habilidade_pseudonimizar_pii/: __init__.py  core.py
tests/: test_core.py  test_placeholder.py
