[project]
name = "mana-habilidade-pseudonimizar-pii"
version = "0.1.0"
description = "Pseudonimização defensiva de PII (nomes próprios, CPF, CNPJ, filenames) antes de enviar payload pra LLM ou API de terceiros. Habilidade canônica da Maná Builder."
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Sementes Maná LTDA" }
]
keywords = ["mana", "habilidade", "mana-builder", "ia-first", "pseudonimizacao", "pii", "lgpd", "llm-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Adicione as dependências da habilidade aqui.
    # Mantenha enxuto — habilidade é pra ser pequena e focada.
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.urls]
Homepage = "https://github.com/Sementesmana/mana-habilidade-pseudonimizar-pii"
Repository = "https://github.com/Sementesmana/mana-habilidade-pseudonimizar-pii"
Issues = "https://github.com/Sementesmana/mana-habilidade-pseudonimizar-pii/issues"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mana_habilidade_pseudonimizar_pii"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/SKILL.md",
    "/manifest.yaml",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line too long handled by black-compatible formatter

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
